--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,11 +2,12 @@ name: CI
 on:
   pull_request:
     branches:
-      - production
-      - development
       - master
+env:
+  AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
+  AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
 jobs:
-  CI:
+  code:
     runs-on: ubuntu-latest
     steps:
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
@@ -23,3 +24,20 @@ jobs:
       run: composer code:analyses
     - name: Tests and coverage
       run: composer test:coverage
+  terraform:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./devops/terraform
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: "1.2.0"
+      - name: Terraform init
+        run: terraform init
+      - name: Terraform Validate
+        run: terraform validate
