--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@ yarn-error.log
 /coverage
 composer.lock
 package-lock.json
+
+/devops/terraform/.terraform/*
+/devops/terraform/terraform.tfstate
+/devops/terraform/.terraform.lock.hcl
+/devops/terraform/docker-compose.yml
