--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,7 +29,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ./devops/terraform
+        working-directory: ./terraform
     steps:
       - name: Checkout
         uses: actions/checkout@v1
